--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2440,7 +2440,7 @@ input, select, textarea {
 				width: 275px;
 				z-index: 10002;
 				width: 275px;
-				background: #dee3e6 url("images/testTop.png");
+				background: #dee3e6 url("images/headtest.jpg");
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 			}
 
